# design-patterns

./: .gitignore  README.md  pyproject.toml  run_with_cache.py  setup.sh
creational_patterns/: abstract_factory.py  builder.py  singleton.py
patterns/behavioural/: chain_of_responsibility.py  command.py  interpreter.py  iterator.py  mediator.py  memento.py  observer.py  state.py  strategy.py  template_method.py  visitor.py
patterns/creational/: abstract_factory.py  factory_method.py  prototype.py
patterns/structural/: decorator.py  facade.py  flyweight.py  proxy.py
structural_patterns/: adapter.py  bridge.py  composite.py
