[project]
name = "design-patterns"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "pillow>=11.2.1",
    "ruff>=0.11.11",
    "transformers>=4.52.3",
]

[tool.poe.tasks]
singleton = "uv run run_with_cache.py creational_patterns/singleton.py" 
prototype = "uv run run_with_cache.py creational_patterns/prototype.py"
builder = "uv run run_with_cache.py creational_patterns/builder.py"
abstract_factory = "uv run run_with_cache.py creational_patterns/abstract_factory.py"
factory_method = "uv run run_with_cache.py creational_patterns/factory_method.py"